# aws_lambda_rust

./: Cargo.toml
src/: main.rs
