[package]
name = "aws_lambda_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
tokio = {version="1.16.1", features=["full"]}
lambda_runtime = "0.4.1"
serde = "1.0.136"
serde_json = "1.0.78"
serde_derive = "1.0.136"
log = "0.4.14"
simple_logger = "2.1.0"
uuid = {version="0.8.2", features=["v4"]}